--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   }
   
   html {
-    @apply scroll-smooth;
+    @apply scroll-smooth overflow-x-hidden;
   }
   
   body {
@@ -44,6 +44,10 @@
         hsl(var(--background)) 0%, 
         hsl(230 35% 5%) 100%
       );
+  }
+
+  #root {
+    @apply overflow-x-hidden;
   }
   
   h1, h2, h3, h4, h5, h6 {
